# ipam-client

./: .gitignore  .travis.yml  README.md  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt
ipam/client/: abstractipam.py
ipam/client/backends/: phpipam.py
ipam/client/tests/: test_phpipam.py
ipam/client/tests/data/: db-no-settings.sql  db-old-version.sql  db-recent-version.sql  db.sql
