[metadata]
description-file = README.rst
name = ipam-client
description = IPAM abstraction layer library
author = Criteo
author-email = github@criteo.com
project_urls =
    Source Code = https://github.com/criteo/ipam-client
keywords =
    ipam
    phpipam
license = Apache
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[bdist_wheel]
universal=1

[files]
packages =
    ipam
